Added fake data obj and iterated in html

--- a/src/app/component-two/component-two.component.html
+++ b/src/app/component-two/component-two.component.html
@@ -1,1 +1,20 @@
 <p>component-two works!</p>
+<section>
+    Fusce vel sapien neque. Donec ullamcorper risus et odio interdum, nec sollicitudin nulla venenatis. Donec posuere
+    vitae urna vel consequat.
+    Donec et turpis mauris. In ultrices tristique porta. Suspendisse varius ante in augue facilisis, sit amet fringilla
+    elit dapibus.
+    Curabitur imperdiet tincidunt lacus a luctus.
+    Aliquam mi tortor, semper non pretium interdum, sodales ut mi. Quisque non consequat tellus. Aenean sollicitudin
+    vehicula sem pellentesque blandit.
+</section>
+<div>
+    <ul>
+        <li *ngFor="let x of fakeData">
+            <div>
+                <h2>{{x.name}}</h2>
+                <span>{{x.about}}</span>
+            </div>
+        </li>
+    </ul>
+</div>
