Added another div to comp 1

--- a/src/app/comp-one/comp-one.component.html
+++ b/src/app/comp-one/comp-one.component.html
@@ -7,3 +7,6 @@
         Vestibulum cursus, ligula sit amet tristique fringilla, magna ipsum fringilla erat, id molestie urna dui sit amet urna. Interdum et malesuada fames ac ante
          ipsum primis in faucibus. Duis tempor risus hendrerit vehicula placerat.</p>
 </div>
+<div>
+    Hi this was added later
+</div>
